# Ancient_Script_Translator

./: .replit  SUMMARIZATION.md  ancient_script_app.py  app.py  config.yaml  go.mod  go.sum  index.js  main.go  minimal_streamlit.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run_streamlit.sh  simple_app.py  simple_streamlit.py  streamlit_app.py  streamlit_full_app.py  test_comprehensive.sh  test_metadata.sh  test_summarization.sh
api/: grpc.go  rest.go  tcp.go  udp.go
models/: manuscript.go
proto/: translator.pb.go  translator.proto
services/: handler.go  imageprocessor.go  metadataextractor.go  summarizer.go  translator.go
static/: index.html
static/css/: styles.css
static/js/: app.js
templates/: index.html
utils/: config.go  conversion.go  imageprocessing.go  logger.go
